bat.bool1.monkeytrouble.MonkeyTrouble.scala.error
Erreur de compilation :
MonkeyTrouble:3: error: not found: value bsmile
  if((aSmile==true && bsmile==true)||(aSmile == false && bSmile == false)){
                      ^