bat.bool1.monkeytrouble.MonkeyTrouble.scala.code
def monkeyTrouble(aSmile:Boolean, bSmile:Boolean): Boolean = {
  if((aSmile==true && bsmile==true)||(aSmile == false && bSmile == false)){
    return true
  }
  else{
    return false
  }
}